-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.3.1
Steps to reproduce the issue
1. Change QtCreator theme to Flat Dark
2. Enable SCXMLEditor Qt Creator plugin
3. Create new SCXML file and open it in editor
Expected outcome:
Colors used in SCXML editor attributes view have enough contrast for proper readability
Actual outcome:
Colors used in SCXML editor attributes view are too close to each other making the reading difficult
For Gerrit Dashboard: QTCREATORBUG-18685 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
202055,3 | ScxmlEditor: Make the Attribute Editor table themable | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |