ScxmlEditor: Make the Attribute Editor table themable

...by not using hardcoded colors.

Task-number: QTCREATORBUG-18685
Change-Id: Idbe694b4112cb2c7d82738598fb04c68c510c609
Reviewed-by: Marco Benelli <marco.benelli@qt.io>